feat: Add a scrap table and API
